# devops-engineer-from-scratch-project-313

./: .env  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  compose.yml  dev.db  docker-compose.yml  main.py  nginx.conf  package.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
nginx/: default.conf  index.html
tests/: test_links.py  test_ping.py
